--- a/thuyhoangadmin/src/Pages/InventoryPage/InventoryPage.css
+++ b/thuyhoangadmin/src/Pages/InventoryPage/InventoryPage.css
@@ -82,3 +82,30 @@
   font-size: 18px;
   padding: 20px;
 }
+
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 15px;
+}
+
+.pagination-controls button {
+  background-color: #007bff;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.pagination-controls button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination-controls span {
+  font-size: 18px;
+}
